--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        #top{
+            background: pink;
+            color: black;
+            padding: 40px;
+            text-align: center;
+            font-size: 40px;
+        }
+    </style>
     <title>
-
+        Boiwife inc.
     </title>
 </head>
 <body>
-    <h1>
-        This is homosex
-    </h1>
-    <p>
-        It's not, I was trolling hehehe.
-    </p>
+    <div id="top">
+        <a href="https://undetectedawariv2.newgrounds.com/">SHAMELESS PLUG</a>
+    </div>
 </body>
 </html>
